Updates to scraper
